Fix text alignment

--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -27,6 +27,7 @@ h1 {
 .center-box {
   margin: 0 auto;
   max-width: 500px;
+  text-align: center;
 }
 
 .links {
